--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,7 +53,7 @@ android {
             shrinkResources false
             buildConfigField "boolean", "LOG_OPEN", "true"
             buildConfigField "long", "BUILD_TIMEMILLIS", System.currentTimeMillis() + "L"
-            signingConfig signingConfigs.debug
+           // signingConfig signingConfigs.debug
         }
         release {
             debuggable false
@@ -69,6 +69,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    buildToolsVersion '26.0.2'
 }
 
 dependencies {
@@ -101,4 +102,5 @@ dependencies {
 
     compile 'com.github.ruiaa:SwipeToLoadLayout:1.0.4.1'
     compile 'com.github.ruiaa:BottomNavigation:0.4'
+    compile 'com.android.support:design:26.1.0'
 }
