--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,4 +108,8 @@ dependencies {
     compile 'com.github.bumptech.glide:okhttp3-integration:4.1.1'
     compile 'jp.wasabeef:glide-transformations:3.0.1'
     compile 'com.github.chrisbanes:PhotoView:2.1.3'
+    //二维码
+    compile 'com.google.zxing:core:3.2.0'
+    compile 'com.github.LuckSiege.PictureSelector:picture_library:v2.1.6'
+    compile 'com.contrarywind:Android-PickerView:3.2.7'
 }
