--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <!--腾讯所需权限-->
-    <!--<uses-permission android:name="android.permission.INTERNET"/>-->,
+    <!--<uses-permission android:name="android.permission.INTERNET"/>-->
     <!-- 获取运营商信息，用于支持提供运营商信息相关的接口-->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <!--微信所需权限-->
