资讯我的界面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -421,5 +421,7 @@
 
         <!--降价拍-->
 
+        <!--资讯-->
+        <activity android:name=".modules.inform.MySelfActivity" />
     </application>
 </manifest>
