资讯栏目主页，粉丝界面，关注界面，标签内容界面，更换封面界面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -445,6 +445,11 @@
         <!--资讯-->
         <activity android:name=".modules.inform.InformMySelfActivity" />
         <activity android:name=".modules.inform.InformChangeCoverActivity" />
-        <activity android:name=".modules.inform.InformOrderMsgActivity" />
+        <activity android:name=".modules.inform.InformColumnMsgActivity" />
+        <activity android:name=".modules.inform.InformOrderSelfActivity" />
+        <activity android:name=".modules.inform.InformSelfFollowActivity" />
+        <activity android:name=".modules.inform.InformSelfFansActivity" />
+        <activity android:name=".modules.inform.InformLableContentActivity" />
+        <activity android:name=".modules.inform.InformEditArticleActivity" />
     </application>
 </manifest>
