编辑文章界面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -451,5 +451,6 @@
         <activity android:name=".modules.inform.InformSelfFansActivity" />
         <activity android:name=".modules.inform.InformLableContentActivity" />
         <activity android:name=".modules.inform.InformEditArticleActivity" />
+        <activity android:name=".modules.inform.InformDetailsActivity" />
     </application>
 </manifest>
