--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -372,7 +372,9 @@
             android:name="com.amap.api.v2.apikey"
             android:value="a29ac43262d81410e779e24a8d2a5a75" />
 
+        <!--通用web activity-->
         <activity android:name=".modules.common.WebActivity"/>
+        <!--大图显示-->
         <activity android:name=".modules.common.ImgActivity"/>
 
         <!--收藏-->
