--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -455,6 +455,7 @@
         <activity android:name=".modules.inform.InformLableContentActivity" />
         <activity android:name=".modules.inform.InformEditArticleActivity" />
         <activity android:name=".modules.inform.InformDetailsActivity" />
+        <activity android:name=".modules.inform.InformSearchAcitivity" />
 
         <!--im-->
         <activity android:name=".modules.im.ImListActivity"/>
