--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -460,6 +460,8 @@
         <!--im-->
         <activity android:name=".modules.im.ImListActivity"/>
         <activity android:name=".modules.im.ImChatActivity"/>
+        <activity android:name=".modules.im.ImSettingActivity"/>
+        <activity android:name=".modules.im.ImSettingNoticeActivity"/>
 
         <!--版本更新-->
         <activity android:name=".modules.set.activity.AboutVersionIntroActivity"/>
