--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,20 +18,6 @@ android {
             ]
         }
     }
-    defaultConfig {
-        multiDexEnabled true
-        applicationId "cn.czyugang.tcg.client"
-        minSdkVersion rootProject.minSdkVersion
-        targetSdkVersion rootProject.targetSdkVersion
-        versionCode 100
-        versionName "10.2.3.3279"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        javaCompileOptions {
-            annotationProcessorOptions {
-                arguments = [moduleName: project.getName()]
-            }
-        }
-    }
     signingConfigs {
         debug {
             storeFile file('cn.czyugang.jks')//签名文件路径
@@ -46,6 +32,26 @@ android {
             keyPassword "czyugang"  //签名密码
         }
     }
+    defaultConfig {
+        multiDexEnabled true
+        applicationId "cn.czyugang.tcg.client"
+        minSdkVersion rootProject.minSdkVersion
+        targetSdkVersion rootProject.targetSdkVersion
+        versionCode 100
+        versionName "10.2.3.3279"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [moduleName: project.getName()]
+            }
+        }
+        resConfigs "zh"
+        ndk {
+            //abiFilters "armeabi-v7a", "arm64-v8a"
+            abiFilters "armeabi-v7a"
+        }
+    }
+
     buildTypes {
         debug {
             debuggable true
@@ -57,8 +63,10 @@ android {
         }
         release {
             debuggable false
-            minifyEnabled true
-            shrinkResources true
+//            minifyEnabled true
+//            shrinkResources true
+            minifyEnabled false
+            shrinkResources false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             buildConfigField "boolean", "LOG_OPEN", "false"
             buildConfigField "long", "BUILD_TIMEMILLIS", System.currentTimeMillis() + "L"
@@ -116,5 +124,6 @@ dependencies {
     compile 'com.contrarywind:Android-PickerView:3.2.7'
     compile 'com.youth.banner:banner:1.4.10'
     compile 'com.github.mcxtzhang:SwipeDelMenuLayout:V1.3.0'
-
+    //视频
+    compile 'com.google.android.exoplayer:exoplayer:2.6.0'
 }
