--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     compile fileTree(dir: 'libs', include: ['*.jar'])
     androidTestCompile(deps.espresso, {
         exclude group: 'com.android.support', module: 'support-annotations'
