--- a/app/build.gradle
+++ b/app/build.gradle
@@ -118,6 +118,7 @@ dependencies {
     compile 'com.github.bumptech.glide:okhttp3-integration:4.1.1'
     compile 'jp.wasabeef:glide-transformations:3.0.1'
     compile 'com.github.chrisbanes:PhotoView:2.1.3'
+    compile'de.hdodenhof:circleimageview:2.1.0'
     //二维码
     ///compile 'com.google.zxing:core:3.2.0'
     compile 'cn.yipianfengye.android:zxing-library:2.2'
