--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,11 +78,15 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
     buildToolsVersion '26.0.2'
+
+    //环信
+    //use legacy for android 6.0
+    useLibrary 'org.apache.http.legacy'
 }
 
 dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile(deps.espresso, {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -108,7 +112,6 @@ dependencies {
     compile deps.map_3d
     compile deps.map_search
     testCompile deps.junit
-
     compile 'com.github.ruiaa:SwipeToLoadLayout:1.0.4.2'
     compile 'com.github.ruiaa:BottomNavigation:0.4'
     compile 'com.android.support:design:26.1.0'
@@ -128,4 +131,9 @@ dependencies {
     compile 'com.github.mcxtzhang:SwipeDelMenuLayout:V1.3.0'
     //视频
     compile 'com.google.android.exoplayer:exoplayer:2.6.0'
+    //环信
+    compile 'com.hyphenate:hyphenate-sdk:3.3.0'
+    //mqtt
+    compile 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.1.0'
+    compile 'org.eclipse.paho:org.eclipse.paho.android.service:1.1.1'
 }
