--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,14 @@ allprojects {
         maven { url 'https://jitpack.io' }
         maven { url 'https://maven.google.com' }
         google()
+        //环信
+        maven {
+            url "https://raw.githubusercontent.com/HyphenateInc/Hyphenate-SDK-Android/master/repository"
+        }
+        //mqtt
+        maven {
+            url "https://repo.eclipse.org/content/repositories/paho-snapshots/"
+        }
     }
 }
 
@@ -38,7 +46,7 @@ ext {
     rxjavaVersion = '2.1.3'
     rxandroidVersion = '2.0.1'
     gsonVersion = "2.8.0"
-    hawkVersion="2.0.1"
+    hawkVersion = "2.0.1"
     butterknifeVersion = "8.8.1"
     arouterApiVersion = "1.2.2"
     arouterCompilerVersion = "1.1.3"
@@ -60,7 +68,7 @@ ext {
             rxjava              : "io.reactivex.rxjava2:rxjava:$rxjavaVersion",
             rxandroid           : "io.reactivex.rxjava2:rxandroid:$rxandroidVersion",
             gson                : "com.google.code.gson:gson:$gsonVersion",
-            hawk                   :"com.orhanobut:hawk:$hawkVersion",
+            hawk                : "com.orhanobut:hawk:$hawkVersion",
             butterknife         : "com.jakewharton:butterknife:$butterknifeVersion",
             butterknife_compiler: "com.jakewharton:butterknife-compiler:$butterknifeVersion",
             arouter_api         : "com.alibaba:arouter-api:$arouterApiVersion",
