--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -169,7 +169,7 @@
         <meta-data
             android:name="UMENG_MESSAGE_SECRET"
             android:value="xxxxxxxxxxxxxxxxxxxxxxxxxxxx">
-        </meta-data>
+        </meta-data>  2
         <!--    -->
 
         <!--            mqtt  -->
